--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,10 @@ body {
 .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
     background: #a8dadc important;
 }
+
+html::-webkit-scrollbar{
+    display: none;
+}
+html{
+    scrollbar-width: none;
+}
